--- a/package.json
+++ b/package.json
@@ -6,20 +6,36 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gevorgaraqelyan/prog3final.git"
-  },
+  "keywords": [
+    "json-server"
+  ],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gevorgaraqelyan/prog3final/issues"
-  },
-  "homepage": "https://github.com/gevorgaraqelyan/prog3final#readme",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "jsonfile": "^4.0.0",
-    "request": "^2.81.0",
-    "scrape-it": "^3.3.3"
+    "express-basic-auth": "^1.1.2",
+    "json-server": "^0.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  },
+  "engines": {
+    "node": "6.11.x"
   }
+,
+"repository": {
+  "type": "git",
+  "url": "git+https://github.com/gevorgaraqelyan/prog3final.git"
+},
+"author": "",
+"license": "ISC",
+"bugs": {
+  "url": "https://github.com/gevorgaraqelyan/prog3final/issues"
+},
+"homepage": "https://github.com/gevorgaraqelyan/prog3final#readme",
+"dependencies": {
+  "cheerio": "^1.0.0-rc.2",
+  "jsonfile": "^4.0.0",
+  "request": "^2.81.0",
+  "scrape-it": "^3.3.3"
+}
 }
