--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "express-basic-auth": "^1.1.2",
-    "json-server": "^0.12.0"
+    "json-server": "^0.12.0",
+      "cheerio": "^1.0.0-rc.2",
+    "jsonfile": "^4.0.0",
+    "request": "^2.81.0",
+    "scrape-it": "^3.3.3"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
   },
   "engines": {
     "node": "6.11.x"
@@ -26,16 +30,9 @@
   "type": "git",
   "url": "git+https://github.com/gevorgaraqelyan/prog3final.git"
 },
-"author": "",
-"license": "ISC",
+
 "bugs": {
   "url": "https://github.com/gevorgaraqelyan/prog3final/issues"
 },
-"homepage": "https://github.com/gevorgaraqelyan/prog3final#readme",
-"dependencies": {
-  "cheerio": "^1.0.0-rc.2",
-  "jsonfile": "^4.0.0",
-  "request": "^2.81.0",
-  "scrape-it": "^3.3.3"
-}
-}
+"homepage": "https://github.com/gevorgaraqelyan/prog3final#readme"
+
