--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
   "name": "prog3final",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Examples to support the MDN resource covering Firefox headless mode — see https://developer.mozilla.org/en-US/Firefox/Headless_mode",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mdn/headless-examples.git"
   },
   "keywords": [
     "json-server"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Mozilla",
+  "license": "CC0-1.0",
+  "bugs": {
+    "url": "https://github.com/mdn/headless-examples/issues"
+  },
+  "homepage": "https://github.com/mdn/headless-examples#readme",
   "dependencies": {
-    "express-basic-auth": "^1.1.2",
-    "json-server": "^0.12.0",
-      "cheerio": "^1.0.0-rc.2",
+    "cheerio": "^1.0.0-rc.2",
+    "iconv-lite": "^0.4.19",
     "jsonfile": "^4.0.0",
-    "request": "^2.81.0",
-    "scrape-it": "^3.3.3"
+    "open": "0.0.5",
+    "request": "^2.82.0",
+    "scrape-it": "^3.3.3",
+    "selenium-webdriver": "^3.5.0",
+    "express-basic-auth": "^1.1.2",
+    "json-server": "^0.12.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.11.0"
   },
   "engines": {
     "node": "6.11.x"
   }
-,
-"repository": {
-  "type": "git",
-  "url": "git+https://github.com/gevorgaraqelyan/prog3final.git"
-},
-
-"bugs": {
-  "url": "https://github.com/gevorgaraqelyan/prog3final/issues"
-},
-"homepage": "https://github.com/gevorgaraqelyan/prog3final#readme"
-
+}
